<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SwitchButtonDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="copyright">Current version 1.2\n&#169; 2014 Kyle_DUO. Some rights reserved.</string>

    <!-- style title -->
    <string name="style_default">Default Style</string>
    <string name="style_image">Using Image</string>
    <string name="style_ios">iOS7 style</string>
    <string name="style_custom">Custom Style</string>
    <string name="style_md">Material Design</string>
    <string name="style_change">Change Style In Code \n(use the 1st to change the 2nd one)</string>
    <string name="changeface">Change Face</string>
    <string name="enable_title">enable/disable other SwitchButtons</string>

    <!-- use title -->
    <string name="use_listener">work with listener</string>
    <string name="use_listener_finish">You did it!</string>
    <string name="use_long">work with stuff takes long</string>
    <string name="use_long_hint">Click "Start" button to kick it off.</string>
    <string name="use_long_finish">Click "Start" button to kick it off.</string>
    <string name="use_toggle">2 ways to TOGGLE</string>
    <string name="use_checked">2 ways to SET_CHECKED</string>
    <string name="toggle_animated">toggle();</string>
    <string name="toggle_not_animated">toggle(false);</string>
    <string name="checked_animated">slideToChecked(boolean);</string>
    <string name="checked_not_animated">setChecked(boolean);</string>
    <string name="bt_start">Start</string>

    <!-- menu -->
    <string name="action_github">view in github</string>
    <string name="action_blog">my blog</string>

    <!-- contents -->
    <string-array name="contents">
        <item>@string/title_activity_style</item>
        <item>@string/title_activity_use</item>
        <item>@string/copyright</item>
    </string-array>

    <string name="title_activity_style">Easy to style</string>
    <string name="title_activity_use">Easy to use</string>

</resources>