<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.kyleduo.switchbuttondemo.UseActivity" >

        <TextView
            style="@style/StyleTitleText"
            android:text="@string/use_listener" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/sb_use_listener"
                style="@style/MaterialDesignStyle" />

            <TextView
                android:id="@+id/listener_finish"
                style="@style/StyleTitleText"
                android:layout_marginLeft="16dp"
                android:text="@string/use_listener_finish" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="#cccccc" />

        <TextView
            style="@style/StyleTitleText"
            android:text="@string/use_long" />

        <TextView
            style="@style/StyleTitleText"
            android:text="@string/use_long_hint"
            android:textSize="12sp" />

        <Button
            android:id="@+id/long_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_start" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical" >

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/sb_use_long"
                style="@style/MaterialDesignStyle"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:focusable="false" />

            <ProgressBar
                android:id="@+id/pb"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/sb_use_long" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="#cccccc" />

        <TextView
            style="@style/StyleTitleText"
            android:text="@string/use_toggle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/sb_use_toggle"
                style="@style/MaterialDesignStyle"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:focusable="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/sb_use_toggle"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/toggle_ani"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle_animated"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/toggle_not_ani"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle_not_animated"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="#cccccc" />

        <TextView
            style="@style/StyleTitleText"
            android:text="@string/use_checked" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/sb_use_checked"
                style="@style/MaterialDesignStyle"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:focusable="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/sb_use_checked"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/checked_ani"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checked_animated"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/checked_not_ani"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checked_not_animated"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>