<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kyleduo.switchbuttondemo.MainActivity" >

    <TextView
        style="@style/StyleTitleText"
        android:text="@string/style_default" />

    <com.kyleduo.switchbutton.SwitchButton style="@style/SwitchButtonStyle" />

    <TextView
        style="@style/StyleTitleText"
        android:text="@string/style_custom" />

    <com.kyleduo.switchbutton.SwitchButton
        style="@style/SwitchButtonStyle"
        app:animationVelocity="8"
        app:thumbColor="#ee4b71"
        app:thumb_height="16dp"
        app:thumb_margin="3dp"
        app:thumb_width="26dp" />

    <TextView
        style="@style/StyleTitleText"
        android:text="@string/style_image" />

    <com.kyleduo.switchbutton.SwitchButton
        style="@style/SwitchButtonStyle"
        app:animationVelocity="8"
        app:offDrawable="@drawable/img_back_off"
        app:onDrawable="@drawable/img_back_on"
        app:thumbDrawable="@drawable/selector_thumb"
        app:thumb_marginBottom="2dp"
        app:thumb_marginLeft="3dp"
        app:thumb_marginRight="3dp"
        app:thumb_marginTop="3dp" />

    <TextView
        style="@style/StyleTitleText"
        android:text="@string/style_change" />

    <LinearLayout
        android:id="@+id/incode_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/change_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeface" />
    </LinearLayout>

    <TextView
        style="@style/StyleTitleText"
        android:text="@string/style_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_title" />

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/sb_enable"
            style="@style/SwitchButtonStyle"
            app:animationVelocity="8"
            app:offDrawable="@drawable/img_back_off"
            app:onDrawable="@drawable/img_back_on"
            app:thumbDrawable="@drawable/selector_thumb"
            app:thumb_marginBottom="2dp"
            app:thumb_marginLeft="3dp"
            app:thumb_marginRight="3dp"
            app:thumb_marginTop="3dp" />
    </LinearLayout>

</LinearLayout>