<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kyleduo.switchbuttondemo.StyleActivity" >

    <TextView
        style="@style/StyleTitleText"
        android:text="@string/style_default" />

    <com.kyleduo.switchbutton.SwitchButton
        android:id="@+id/sb_default"
        style="@style/SwitchButtonStyle" />

    <TextView
        style="@style/StyleTitleText"
        android:text="@string/style_md" />

    <com.kyleduo.switchbutton.SwitchButton
        android:id="@+id/sb_md"
        style="@style/MaterialDesignStyle" />

    <TextView
        style="@style/StyleTitleText"
        android:text="@string/style_ios" />

    <com.kyleduo.switchbutton.SwitchButton
        android:id="@+id/sb_ios"
        style="@style/SwitchButtonStyle"
        app:animationVelocity="8"
        app:measureFactor="1.5"
        app:offDrawable="@drawable/ios_off"
        app:onColor="#43d95d"
        app:thumbDrawable="@drawable/ios_thumb"
        app:thumb_marginBottom="-8dp"
        app:thumb_marginLeft="-5dp"
        app:thumb_marginRight="-5dp"
        app:thumb_marginTop="-2.5dp" />

    <TextView
        style="@style/StyleTitleText"
        android:text="@string/style_change" />

    <LinearLayout
        android:id="@+id/incode_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/sb_changeface_control"
            style="@style/SwitchButtonStyle" />
    </LinearLayout>

    <TextView
        style="@style/StyleTitleText"
        android:text="@string/enable_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/sb_enable"
            style="@style/SwitchButtonStyle"
            app:animationVelocity="8"
            app:offDrawable="@drawable/img_back_off"
            app:onDrawable="@drawable/img_back_on"
            app:thumbDrawable="@drawable/selector_thumb"
            app:thumb_marginBottom="2dp"
            app:thumb_marginLeft="3dp"
            app:thumb_marginRight="3dp"
            app:thumb_marginTop="3dp" />
    </LinearLayout>

</LinearLayout>